--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,44 +1,11 @@
-[build-system]
-requires = [
-    "setuptools>=45",
-    "setuptools_scm[toml]>=6.2",
-]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "ora"
+name = "ragna"
+version = "0.0.1"
 authors = [
-    { name = "Philip Meier", email = "pmeier@quansight.com" },
+    { name = "Philip Meier", email = "github.pmeier@posteo.de" },
 ]
-dependencies = [
-    "typer",
-    "rich",
-    "shellingham >=1.4, <1.5",
-    "pluggy",
-    "panel >=1.2, <1.3",
-]
-dynamic = ["version"]
+readme = {file = "README.md", content-type = "text/markdown"}
 
-[tool.setuptools_scm]
-write_to = "ora/_version.py"
-local_scheme = "node-and-timestamp"
-
-[project.scripts]
-ora = "ora._cli:app"
-
-[tool.setuptools.packages.find]
-include = [
-    "ora*",
-]
-
-[tool.usort.known]
-# TODO: remove this with usort>=1.1
-third_party = ["panel"]
-
-[tool.ruff]
-# Ignore line too long, because due to black the error can only occure for strings
-ignore = ["E501"]
-
-[tool.ruff.per-file-ignores]
-# ignore unused imports and imports not at the top of the file in __init__.py files
-"__init__.py" = ["F401", "E402"]
+[build-system]
+build-backend = "setuptools.build_meta"
+requires = ["setuptools"]
