--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,11 +13,19 @@ authors = [
 dependencies = [
     "typer",
     "rich",
-    "shellingham >=1.4, <1.5",
     "pluggy",
     "panel >=1.2, <1.3",
+    "packaging",
 ]
 dynamic = ["version"]
+
+# to update this, run scripts/update_optional_dependencies.py
+[project.optional-dependencies]
+extensions = [
+    'chromadb>=0.4',
+    'requests',
+    'tiktoken',
+]
 
 [tool.setuptools_scm]
 write_to = "ora/_version.py"
@@ -42,3 +50,12 @@ ignore = ["E501"]
 [tool.ruff.per-file-ignores]
 # ignore unused imports and imports not at the top of the file in __init__.py files
 "__init__.py" = ["F401", "E402"]
+
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-rfEX --tb=short -Werror"
+testpaths = [
+    "tests",
+]
+xfail_strict = true
