implement PDF page extractor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dynamic = ["version"]
 [project.optional-dependencies]
 extensions = [
     'chromadb>=0.4',
+    'pymupdf',
     'requests',
     'tiktoken',
 ]
