--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,13 @@ name = "ragna"
 authors = [
     { name = "Philip Meier", email = "pmeier@quansight.com" },
 ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+]
+requires-python = ">=3.9"
 dependencies = [
     "typer",
     "rich",
@@ -17,6 +24,7 @@ dependencies = [
     "panel >=1.2, <1.3",
     "packaging",
     "param",
+    "importlib_metadata >=4.6; python_version < '3.10'",
 ]
 dynamic = ["version"]
 
