--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "typer",
     "rich",
     "pluggy",
-    "panel >=1.2, <1.3",
+    # TODO: this needs to be constrained to panel >=1.3 as soon as that is released.
+    #  See README.md#panel for details
+    "panel",
     "packaging",
     "param",
     "importlib_metadata >=4.6; python_version < '3.10'",
