--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "packaging",
     "param",
     "importlib_metadata >=4.6; python_version < '3.10'",
+    "structlog",
 ]
 dynamic = ["version"]
 
