--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ragna"
+name = "Ragna"
 authors = [
     { name = "Philip Meier", email = "pmeier@quansight.com" },
 ]
@@ -18,27 +18,44 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "typer",
-    "rich",
-    "pluggy",
-    # TODO: this needs to be constrained to panel >=1.3 as soon as that is released.
-    #  See README.md#panel for details
-    "panel",
-    "packaging",
-    "param",
-    "importlib_metadata >=4.6; python_version < '3.10'",
+    "rq",
+    "pydantic <2",
     "structlog",
+    "packaging",
+    "importlib_metadata >=4.6; python_version < '3.10'",
+    "typer",
 ]
 dynamic = ["version"]
 
-# to update this, run scripts/update_optional_dependencies.py
 [project.optional-dependencies]
-extensions = [
+console = [
+    "rich",
+]
+api = [
+    "fastapi",
+]
+ui = [
+    "panel ==1.3",
+    "param",
+    "aiohttp",
+]
+# to update the two entries below, run scripts/update_optional_dependencies.py
+builtin-components = [
     'chromadb>=0.4',
-    'pymupdf',
     'requests',
     'tiktoken',
 ]
+complete = [
+    'aiohttp',
+    'chromadb>=0.4',
+    'fastapi',
+    'panel==1.3',
+    'param',
+    'requests',
+    'rich',
+    'tiktoken',
+]
+
 
 [tool.setuptools_scm]
 write_to = "ragna/_version.py"
@@ -88,14 +105,6 @@ warn_unused_ignores = true
 
 warn_return_any = true
 warn_unused_configs = true
-
-[[tool.mypy.overrides]]
-module = "ragna._backend.hookspecs"
-disable_error_code = "empty-body"
-
-[[tool.mypy.overrides]]
-module = "ragna.extensions.*"
-disable_error_code = "has-type"
 
 [[tool.mypy.overrides]]
 module = [
