--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ console = [
 ]
 api = [
     "fastapi",
+    "uvicorn",
 ]
 ui = [
     "panel ==1.3",
@@ -41,19 +42,20 @@ ui = [
 ]
 # to update the two entries below, run scripts/update_optional_dependencies.py
 builtin-components = [
-    'chromadb>=0.4',
-    'requests',
-    'tiktoken',
+    "chromadb>=0.4",
+    "requests",
+    "tiktoken",
 ]
 complete = [
-    'aiohttp',
-    'chromadb>=0.4',
-    'fastapi',
-    'panel==1.3',
-    'param',
-    'requests',
-    'rich',
-    'tiktoken',
+    "aiohttp",
+    "chromadb>=0.4",
+    "fastapi",
+    "panel==1.3",
+    "param",
+    "requests",
+    "rich",
+    "tiktoken",
+    "uvicorn",
 ]
 
 
