--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,11 +18,14 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "rq",
-    "pydantic <2",
-    "structlog",
     "packaging",
     "importlib_metadata >=4.6; python_version < '3.10'",
+    "sqlalchemy >=2",
+    "redis",
+    "rq",
+    "cloudpickle",
+    "pydantic <2",
+    "structlog",
     "typer",
 ]
 dynamic = ["version"]
@@ -31,14 +34,14 @@ dynamic = ["version"]
 console = [
     "rich",
 ]
-api = [
-    "fastapi",
-]
-ui = [
-    "panel ==1.3",
-    "param",
-    "aiohttp",
-]
+#api = [
+#    "fastapi",
+#]
+#ui = [
+#    "panel ==1.3",
+#    "param",
+#    "aiohttp",
+#]
 # to update the two entries below, run scripts/update_optional_dependencies.py
 builtin-components = [
     'chromadb>=0.4',
@@ -46,11 +49,7 @@ builtin-components = [
     'tiktoken',
 ]
 complete = [
-    'aiohttp',
     'chromadb>=0.4',
-    'fastapi',
-    'panel==1.3',
-    'param',
     'requests',
     'rich',
     'tiktoken',
