--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,24 +39,24 @@ api = [
     "uvicorn",
     "PyJWT",
     "python-multipart",
-    "httpx",
 ]
 ui = [
 #    "panel ==1.3",
 #    "param",
-#    "aiohttp",
+    "httpx",
 ]
 # to update the two entries below, run scripts/update_optional_dependencies.py
 builtin-components = [
     "chromadb>=0.4",
-    "requests",
+    "httpx",
     "tiktoken",
 ]
 complete = [
     "PyJWT",
     "chromadb>=0.4",
     "fastapi",
-    "requests",
+    "httpx",
+    "python-multipart",
     "rich",
     "tiktoken",
     "uvicorn",
@@ -81,7 +81,7 @@ include = [
 third_party = ["panel"]
 
 [tool.ruff]
-# Ignore line too long, because due to black the error can only occure for strings
+# Ignore line too long, because due to black, the error can only occur for strings
 ignore = ["E501"]
 
 [tool.ruff.per-file-ignores]
