add REST API (#37)

--- a/environment.yaml
+++ b/environment.yaml
@@ -5,6 +5,9 @@ dependencies:
   - python =3.9
   - pip
   - redis-server
+  - jupyter
+  - python-dotenv
+  - boto3
   - pytest >=6
   - tomlkit
   - mypy
