--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ dependencies = [
     "sqlalchemy >=2",
     "redis",
     "rq",
-    "cloudpickle",
     "pydantic <2",
     "structlog",
     "typer",
@@ -34,26 +33,34 @@ dynamic = ["version"]
 console = [
     "rich",
 ]
-#api = [
-#    "fastapi",
-#]
-#ui = [
+api = [
+    "fastapi",
+    "uvicorn",
+    "PyJWT",
+    "python-multipart",
+]
+ui = [
 #    "panel ==1.3",
 #    "param",
-#    "aiohttp",
-#]
+    "httpx",
+]
 # to update the two entries below, run scripts/update_optional_dependencies.py
 builtin-components = [
-    'chromadb>=0.4',
-    'requests',
-    'tiktoken',
+    "chromadb>=0.4",
+    "httpx",
+    "tiktoken",
 ]
 complete = [
-    'chromadb>=0.4',
-    'requests',
-    'rich',
-    'tiktoken',
+    "PyJWT",
+    "chromadb>=0.4",
+    "fastapi",
+    "httpx",
+    "python-multipart",
+    "rich",
+    "tiktoken",
+    "uvicorn",
 ]
+
 
 
 [tool.setuptools_scm]
@@ -73,7 +80,7 @@ include = [
 third_party = ["panel"]
 
 [tool.ruff]
-# Ignore line too long, because due to black the error can only occure for strings
+# Ignore line too long, because due to black, the error can only occur for strings
 ignore = ["E501"]
 
 [tool.ruff.per-file-ignores]
