--- a/environment.yaml
+++ b/environment.yaml
@@ -18,4 +18,6 @@ dependencies:
     - furo
     - myst-parser
     - sphinx-design
+    - sphinx-inline-tabs
     - sphinx-copybutton
+    - sphinxext-opengraph
