--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
       - id: check-yaml
       - id: mixed-line-ending
         args: [ --fix=lf ]
+        exclude: docs/make.bat
       - id: end-of-file-fixer
   - repo: https://github.com/omnilib/ufmt
     rev: v2.1.0
