--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,11 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "packaging",
+    "huey",
     "importlib_metadata >=4.6; python_version < '3.10'",
-    "sqlalchemy >=2",
-    "redis",
-    "rq",
+    "packaging",
     "pydantic <2",
+    "sqlalchemy >=2",
     "structlog",
     "typer",
 ]
@@ -35,9 +34,9 @@ console = [
 ]
 api = [
     "fastapi",
-    "uvicorn",
     "PyJWT",
     "python-multipart",
+    "uvicorn",
 ]
 ui = [
 #    "panel ==1.3",
