--- a/environment.yaml
+++ b/environment.yaml
@@ -3,11 +3,20 @@ channels:
   - conda-forge
 dependencies:
   - python =3.9
-  - pip
   - redis-server
-  - jupyter
-  - python-dotenv
-  - boto3
-  - pytest >=6
-  - tomlkit
-  - mypy
+  - pip
+  - pip:
+    - jupyter
+    - python-dotenv
+    - boto3
+    - pytest >=6
+    - tomlkit
+    - mypy
+    # documentation
+    - sphinx
+    - myst-parser
+    - sphinx-copybutton
+    - furo
+    - sphinx-design
+    - sphinx-inline-tabs
+    - sphinxext-opengraph
