--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "cloudpickle",
     "huey",
     "importlib_metadata >=4.6; python_version < '3.10'",
     "packaging",
