--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -3,28 +3,37 @@ description: "Setup development environment"
 
 inputs:
   python-version:
-    default: "3.9"
+    default: "3.11"
     description: "Python version to install."
 
 runs:
   using: composite
 
   steps:
-    - name: Set correct Python version
+    - name: Set correct Python version in environment file
       shell: bash
-      run: |
-        sed -i'' -e 's/python *= *[0-9.]\+/python =${{ inputs.python-version }}/g' environment.yml
-        cat environment.yml
+      run: sed -i'' -e 's/python *= *[0-9.]\+/python =${{ inputs.python-version }}/g' environment.yml
 
     - name: Setup mambaforge and development environment
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniforge-variant: Mambaforge
         miniforge-version: latest
-        activate-environment: ./environment.yml
+        environment-file: ./environment.yml
+        activate-environment: ragna-dev
 
-    - name: Display conda info and list development environment
+    - name: Reset environment file
+      shell: bash
+      run: sed -i'' -e 's/python *= *[0-9.]\+/python =${{ inputs.python-version }}/g' environment.yml
+
+    - name: Display conda info
       shell: bash -el {0}
-      run: |
-        conda info
-        conda list
+      run: conda info
+
+    - name: Install ragna
+      shell: bash -el {0}
+      run: pip install --editable .
+
+    - name: Display development environment
+      shell: bash -el {0}
+      run: conda list
