--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,8 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
+      - name: Setup lint utilities
+        run: pre-commit install-hooks
+
       - name: Run pre-commit
         run: pre-commit run --all-files --show-diff-on-failure --color=always
