--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -4,8 +4,15 @@ channels:
 dependencies:
   - python =3.9
   - redis-server
-  - aiofiles
   - pip
+  - aiofiles
+
+  # for development only
+  - pre-commit
+
+  # For use with Panel branch for Chat Interface
+  - nodejs
+
   - pip:
     - jupyter
     - python-dotenv
@@ -13,7 +20,6 @@ dependencies:
     - pytest >=6
     - tomlkit
     - mypy
-    - pre-commit
     # documentation
     - sphinx
     - myst-parser
@@ -26,7 +32,6 @@ dependencies:
     # Temporary dependency for the new Panel Chat Interface.
     # TODO: remove this dependency once the new Panel Chat Interface is released,
     # and pin Panel's version
-    - git+https://github.com/holoviz/panel@chat_components
-    - mkdocs
-    - mkdocs-material
-    - mkdocstrings
+    # - git+https://github.com/holoviz/panel@chat_components
+    - git+https://github.com/holoviz/panel@a0d0ba29f296547c4fa5968f92ecb12cdadfad47
+    
