--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -34,9 +34,9 @@ runs:
       uses: actions/cache@v3
       with:
         path: ${{ env.CONDA }}/envs
-        key: ${{ runner.os }}-${{ runner.arch }}--${{ inputs.python-version }}--${{steps.cache-key.outputs.date }}--${{ hashFiles('environment.yml', 'pyproject.toml') }}
+        key: env-${{ runner.os }}-${{ runner.arch }}-${{ inputs.python-version }}|${{steps.cache-key.outputs.date }}-${{ hashFiles('environment.yml', 'pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}--${{ runner.arch }}--${{ inputs.python-version }}
+          env-${{ runner.os }}-${{ runner.arch }}-${{ inputs.python-version }}
 
     - name: Update conda environment if necessary
       if: steps.cache.outputs.cache-hit != 'true'
