--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,13 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/setup-env
 
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit|${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit
+
       - name: Setup lint utilities
         run: pre-commit install-hooks
 
