add importability test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,27 @@ on:
       - "pyproject.toml"
 
 jobs:
+  importable:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -el {0}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup environment
+        uses: ./.github/actions/setup-env
+        with:
+          optional-dependencies: "false"
+
+      - name: Check if all public packages are importable
+        run: python tests/test_importable.py
+
+
   unit:
     runs-on: ubuntu-latest
     defaults:
