--- a/.github/actions/setup-env/action.yml
+++ b/.github/actions/setup-env/action.yml
@@ -5,6 +5,9 @@ inputs:
   python-version:
     default: "3.9"
     description: "Python version to install."
+  optional-dependencies:
+    default: "true"
+    description: "Install ragna with [complete], i.e. all optional dependencies"
 
 runs:
   using: composite
@@ -34,9 +37,9 @@ runs:
       uses: actions/cache@v3
       with:
         path: ${{ env.CONDA }}/envs
-        key: ${{ runner.os }}-${{ runner.arch }}--${{ inputs.python-version }}--${{steps.cache-key.outputs.date }}--${{ hashFiles('environment.yml', 'pyproject.toml') }}
+        key: env-${{ runner.os }}-${{ runner.arch }}-${{ inputs.python-version }}|${{steps.cache-key.outputs.date }}-${{ hashFiles('environment.yml', 'pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}--${{ runner.arch }}--${{ inputs.python-version }}
+          env-${{ runner.os }}-${{ runner.arch }}-${{ inputs.python-version }}
 
     - name: Update conda environment if necessary
       if: steps.cache.outputs.cache-hit != 'true'
@@ -49,7 +52,12 @@ runs:
 
     - name: Install ragna
       shell: bash -el {0}
-      run: pip install --editable .
+      run: |
+        PROJECT_PATH="${PWD}"
+        if [[ ${{ inputs.optional-dependencies }} == "true" ]]; then
+          PROJECT_PATH="${PROJECT_PATH}[complete]"
+        fi
+        pip install --editable "${PROJECT_PATH}"
 
     - name: Display development environment
       shell: bash -el {0}
