--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "cloudpickle",
     "huey",
     "importlib_metadata >=4.6; python_version < '3.10'",
     "packaging",
@@ -34,6 +33,7 @@ console = [
     "rich",
 ]
 api = [
+    "aiofiles",
     "fastapi",
     "PyJWT",
     "python-multipart",
@@ -52,6 +52,7 @@ builtin-components = [
 ]
 complete = [
     "PyJWT",
+    "aiofiles",
     "chromadb>=0.4",
     "fastapi",
     "httpx",
