Migrate to MkDocs

--- a/environment.yaml
+++ b/environment.yaml
@@ -13,10 +13,6 @@ dependencies:
     - tomlkit
     - mypy
     # documentation
-    - sphinx
-    - myst-parser
-    - sphinx-copybutton
-    - furo
-    - sphinx-design
-    - sphinx-inline-tabs
-    - sphinxext-opengraph
+    - mkdocs
+    - mkdocs-material
+    - mkdocstrings
