Migrate to MkDocs (#58)
Co-authored-by: Philip Meier <github.pmeier@posteo.de>

--- a/environment.yml
+++ b/environment.yml
@@ -14,10 +14,6 @@ dependencies:
     - mypy
     - pre-commit
     # documentation
-    - sphinx
-    - myst-parser
-    - sphinx-copybutton
-    - furo
-    - sphinx-design
-    - sphinx-inline-tabs
-    - sphinxext-opengraph
+    - mkdocs
+    - mkdocs-material
+    - mkdocstrings
