--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -33,6 +33,6 @@ dependencies:
     # Temporary dependency for the new Panel Chat Interface.
     # TODO: remove this dependency once the new Panel Chat Interface is released,
     # and pin Panel's version
-    # - git+https://github.com/holoviz/panel@chat_components
-    - git+https://github.com/holoviz/panel@a0d0ba29f296547c4fa5968f92ecb12cdadfad47
+    - git+https://github.com/holoviz/panel@main
+    
     
