--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,12 @@ requires-python = ">=3.9"
 dependencies = [
     "cloudpickle",
     "huey",
-    "importlib_metadata >=4.6; python_version < '3.10'",
+    "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
-    "pydantic <2",
-    "sqlalchemy >=2",
-    "structlog",
+    "pydantic>=2",
+    "pydantic-settings",
+    "sqlalchemy>=2",
+    "tomlkit",
     "typer",
 ]
 dynamic = ["version"]
@@ -46,22 +47,22 @@ ui = [
 ]
 # to update the two entries below, run scripts/update_optional_dependencies.py
 builtin-components = [
-    "chromadb>=0.4",
+    "chromadb>=0.4.13",
     "httpx",
+    "pymupdf",
     "tiktoken",
 ]
 complete = [
     "PyJWT",
-    "chromadb>=0.4",
+    "chromadb>=0.4.13",
     "fastapi",
     "httpx",
+    "pymupdf",
     "python-multipart",
     "rich",
     "tiktoken",
     "uvicorn",
 ]
-
-
 
 [tool.setuptools_scm]
 write_to = "ragna/_version.py"
