--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,9 +96,14 @@ ignore = ["E501"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-rfEX --tb=short -Werror"
+addopts = "-rfEX --tb=short"
 testpaths = [
     "tests",
+]
+filterwarnings = [
+    "error",
+    # FIXME: find a way to use the BaseSettings from pydantic-settings with ConfigDict
+    "ignore:Support for class-based `config` is deprecated:pydantic.warnings.PydanticDeprecatedSince20",
 ]
 xfail_strict = true
 
