don't fail fast

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,7 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macos-latest
+      fail-fast: false
 
     runs-on: ${{ matrix.os }}
 
