--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - python =3.9
-  # FIXME: This is not available on Windows
-  #  Can we somehow mark this as "don't try to install on Windows?"
-  - redis-server
+  # FIXME: This is not available on Windows. We need to document this as part of the
+  #  dev installation
+  #  - redis-server
   - pip
   - pip:
     - redis
