--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,6 +38,13 @@ jobs:
           - ubuntu-latest
           - windows-latest
           - macos-latest
+        python-version: ["3.9"]
+        include:
+          - os: ubuntu-latest
+            python-version: "3.10"
+          - os: ubuntu-latest
+            python-version: "3.11"
+
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
@@ -54,6 +61,8 @@ jobs:
 
       - name: Setup environment
         uses: ./.github/actions/setup-env
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Run unit tests
         id: tests
