skip file system and redis queue on Windows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,7 @@ jobs:
       - name: Check if all public packages are importable
         run: python tests/test_importable.py
 
-
-  unit:
+  pytest:
     strategy:
       matrix:
         os:
