add skips to pytest summary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,7 +97,7 @@ ignore = ["E501"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-rfEX --tb=short"
+addopts = "-rsfEX --tb=short"
 testpaths = [
     "tests",
 ]
