--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - python =3.9
-  - redis-server
+  # FIXME: This is not available on Windows. We need to document this as part of the
+  #  dev installation
+  #  - redis-server
   - pip
   - pip:
     - jupyter
