add e2e tests for api

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ ignore = ["E501"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
-addopts = "-rsfEX --tb=short"
+addopts = "-ra --tb=short"
 testpaths = [
     "tests",
 ]
