--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,9 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - footnotes
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 plugins:
   - search
@@ -60,8 +63,10 @@ nav:
 - Community:
   - 'community/contribute.md'
   - 'community/brand.md'
+  - 'community/roadmap.md'
 - References:
   - 'references/python-api.md'
   - 'references/rest-api.md'
   - 'references/cli.md'
+  - 'references/faq.md'
   - 'references/changelog.md'
