🔧 Rename get started as installation doc

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ extra_css:
 # Explicit navigation
 nav:
 - 'index.md'
-- 'get-started.md'
+- 'install.md'
 - Tutorials:
   - 'tutorials/python-api.md'
   - 'tutorials/rest-api.md'
