--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - pytest >=6
     - mypy
     - pre-commit
+    - pathspec
     # documentation
     - mkdocs
     - mkdocs-material
