update env file in gh-actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - ".github/**"
       - "ragna/**"
       - "tests/**"
-      - "environment.yml"
+      - "environment-dev.yml"
       - "pyproject.toml"
 
 jobs:
