--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -14,6 +14,5 @@ mkdocs:
   configuration: mkdocs.yml
 
 # Optionally declare the Python requirements required to build your docs
-python:
-  install:
-  - requirements: environment-dev.yml
+conda:
+  environment: environment-dev.yml
