--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,3 +16,10 @@ mkdocs:
 # Optionally declare the Python requirements required to build your docs
 conda:
   environment: environment-dev.yml
+
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - builtin
