--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,12 +8,18 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.9"
+    python: "mambaforge-22.9"
 
 mkdocs:
   configuration: mkdocs.yml
 
 # Optionally declare the Python requirements required to build your docs
+conda:
+  environment: environment-dev.yml
+
 python:
   install:
-  - requirements: environment-dev.yml
+    - method: pip
+      path: .
+      extra_requirements:
+        - complete
