--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -14,6 +14,8 @@ dependencies:
     - pytest >=6
     - mypy ==1.6.1
     - pre-commit
+    - types-aiofiles
+    - sqlalchemy-stubs
     # documentation
     - mkdocs
     - mkdocs-material
