--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -12,8 +12,10 @@ dependencies:
     - python-dotenv
     - boto3
     - pytest >=6
-    - mypy
+    - mypy ==1.6.1
     - pre-commit
+    - types-aiofiles
+    - sqlalchemy-stubs
     # documentation
     - mkdocs
     - mkdocs-material
