--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,59 +18,35 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
+    "aiofiles",
+    "fastapi",
     "huey",
+    "httpx",
     "importlib_metadata>=4.6; python_version<'3.10'",
     "packaging",
     "pydantic>=2",
     "pydantic-settings>=2",
+    "PyJWT",
+    "python-multipart",
     "redis",
     "questionary",
     "rich",
+    "sqlalchemy>=2",
     "tomlkit",
     "typer",
+    "uvicorn",
 ]
 dynamic = ["version"]
 
 [project.optional-dependencies]
-api = [
-    "aiofiles",
-    "fastapi",
-    "PyJWT",
-    "python-multipart",
-    "sqlalchemy>=2",
-    "uvicorn",
-]
-ui = [
-#    "panel ==1.3",
-#    "param",
-    "httpx",
-]
-# to update the entries below, run scripts/update_optional_dependencies.py
-builtin-document-handlers = [
-    "pymupdf",
-]
-builtin-components = [
-    "chromadb>=0.4",
-    "httpx",
+# to update the array below, run scripts/update_optional_dependencies.py
+builtin = [
+    "chromadb>=0.4.13",
     "lancedb>=0.2",
     "pyarrow",
-    "sentence-transformers",
-    "tiktoken",
-]
-complete = [
-    "aiofiles",
-    "chromadb>=0.4",
-    "fastapi",
-    "httpx",
-    "lancedb>=0.2",
-    "pyarrow",
-    "PyJWT",
     "pymupdf",
-    "python-multipart",
     "sentence-transformers",
-    "sqlalchemy>=2",
     "tiktoken",
-    "uvicorn",
 ]
 
 [tool.setuptools_scm]
